# EsMatrici

./: CMakeLists.txt  ColMatrix.h  Matrix.h  MatrixFactory.h  RectangleMatrix.h  RowMatrix.h  SquareMatrix.h  TypeMatrixFactory.h  main.cpp
test/: MatrixTest.cpp
